# Krab-openclaw

./: .dockerignore  .env  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  Apply OpenClaw Exec Ask Off Hotfix.command  Apply Reserve Telegram Policy.command  Build Translator Mobile Onboarding Packet.command  CHANGELOG.md  CLAUDE.md  Check Current Account Runtime.command  Check Full Ecosystem.command  Check New Account Readiness.command  Check Shared Repo Drift.command  Check iPhone Companion Simulator Build.command  Clear Runtime Chat Session.command  Dockerfile  Export Handoff Bundle.command  Father Reminder Assistant.command  Fix OpenClaw God Mode.command  Freeze Current Account Runtime.command  GEMINI.md  HANDOVER.md  IMPROVEMENTS.md  Install Father Reminder Schedule.command  Krab.command  LM Studio Status.command  Load Nemotron.command  Login Codex CLI.command  Login Gemini CLI OAuth.command  Login GitHub Push Auth.command  Login Google Antigravity OAuth.command  Login OpenAI Codex OAuth.command  Login Qwen Portal OAuth.command  Login Second Telegram MCP Account.command  MIGRATION.md  Open Active Shared Worktree.command  (+170 more)
.claude/: launch.json
.playwright-cli/: page-2026-02-23T13-12-08-888Z.yml  page-2026-02-23T13-16-51-135Z.yml  page-2026-02-23T13-17-11-781Z.yml  page-2026-02-23T13-17-23-179Z.yml  page-2026-03-20T03-36-40-892Z.yml
.ralphy/: .agent-rules.md  AGENTS.md  HISTORY.md
.remember/: benchmarks_adaptive_rerank_19_04_2026.md  next_session.md  next_session_prompt.md  recap-2026-W18.md  remember.md  session_14_reboot_checkpoint.md  session_32_handoff.md
.runtime/: restart_core_backoff.state
:memory:/: chroma.sqlite3
KrabEar/: __init__.py
artifacts/: model_feedback.json  model_ops_state.json  model_routing_memory.json  model_usage_report.json  reaction_feedback.json
browser_data/: Local State  SingletonCookie  SingletonLock  SingletonSocket
config/: agents_catalog.yaml  mcp_servers.json  (+2 more)
(+3736 files in other folders)
